# html-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/full/: Cargo.toml  index.html
examples/full/src/: app.rs  main.rs  routes.rs
examples/full/src/pages/: home.rs
src/: component.rs  document.rs  helper.rs  lib.rs  listener.rs  node.rs  selection.rs  store.rs  toolbar.rs  util.rs
src/component/: highlight.rs  italicize.rs  list.rs  mod.rs  note.rs  underline.rs
src/migration/: mod.rs
src/text/: container.rs  mod.rs  wrapper.rs
