[workspace]
members = [
	"examples/*"
]

[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
frontend = ["js-sys", "gloo-file", "gloo-timers", "gloo-utils", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "chrono/wasmbind"]


[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = "0.4"
bitflags = "1.3"
num_enum = "0.5"

lazy_static = "1.4"


# Frontend
js-sys = { version = "0.3", optional = true }
gloo-file = { version = "0.2", features = ["futures"], optional = true }
gloo-timers = { version = "0.2", features = ["futures"], optional = true }
gloo-utils = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"CssStyleDeclaration",
	"DomTokenList",
	"DomRect",
	"CaretPosition",
	"Selection",
	"Range",
]
optional = true