[workspace]
members = ["examples/*"]

[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# frontend = ["js-sys", "gloo-file", "gloo-timers", "gloo-utils", "wasm-bindgen", "wasm-bindgen-futures", "web-sys", "chrono/wasmbind"]


[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["wasmbind"] }
bitflags = "1.3"
num_enum = "0.5"
bytes = "1.4"

lazy_static = "1.4"


# Frontend
js-sys = { version = "0.3" }
gloo-file = { version = "0.2", features = ["futures"] }
gloo-timers = { version = "0.2", features = ["futures"] }
gloo-utils = { version = "0.1" }
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }

[dependencies.web-sys]
version = "0.3"
features = [
	"HtmlTextAreaElement",
	"Text",
	"MouseEvent",
	"CssStyleDeclaration",
	"DomTokenList",
	"DomRectList",
	"DomRect",
	"CaretPosition",
	"Selection",
	"Range",
]
